Can now press F to full screen, can now set background colour in .config file

--- a/e621rooshow/App.config
+++ b/e621rooshow/App.config
@@ -1,24 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="e621rooshow.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
-    <userSettings>
-        <e621rooshow.Properties.Settings>
-            <setting name="Tags" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="TagsBlacklist" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Interval" serializeAs="String">
-                <value>5</value>
-            </setting>
-        </e621rooshow.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="E621RooShow.Windows.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="e621rooshow.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <userSettings>
+    <E621RooShow.Windows.Properties.Settings>
+      <setting name="Tags" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="TagsBlacklist" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Interval" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="BackgroundColor" serializeAs="String">
+        <value>1, 1, 1</value>
+      </setting>
+    </E621RooShow.Windows.Properties.Settings>
+    <e621rooshow.Properties.Settings>
+      <setting name="Tags" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="TagsBlacklist" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Interval" serializeAs="String">
+        <value>5</value>
+      </setting>
+    </e621rooshow.Properties.Settings>
+  </userSettings>
 </configuration>
