--- a/E621RooShow.Linux/App.config
+++ b/E621RooShow.Linux/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="E621RooShow.Linux.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
@@ -10,4 +15,20 @@
     		</listeners>
     	</trace>
     </system.diagnostics>
+    <userSettings>
+        <E621RooShow.Linux.Properties.Settings>
+            <setting name="Tags" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="TagsBlacklist" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Interval" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="BackgroundColor" serializeAs="String">
+                <value>1, 1, 1</value>
+            </setting>
+        </E621RooShow.Linux.Properties.Settings>
+    </userSettings>
 </configuration>
