--- a/E621RooShow.Linux/App.config
+++ b/E621RooShow.Linux/App.config
@@ -1,34 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="E621RooShow.Linux.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="E621RooShow.ViewModels.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
-    <system.diagnostics>
-    	<trace autoflush="true">
-    		<listeners>
-    			<add name="consoleListener" type="System.Diagnostics.ConsoleTraceListener"/>
-    		</listeners>
-    	</trace>
-    </system.diagnostics>
-    <userSettings>
-        <E621RooShow.Linux.Properties.Settings>
-            <setting name="Tags" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="TagsBlacklist" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Interval" serializeAs="String">
-                <value>5</value>
-            </setting>
-            <setting name="BackgroundColor" serializeAs="String">
-                <value>1, 1, 1</value>
-            </setting>
-        </E621RooShow.Linux.Properties.Settings>
-    </userSettings>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <system.diagnostics>
+    <trace autoflush="true">
+      <listeners>
+        <add name="consoleListener" type="System.Diagnostics.ConsoleTraceListener"/>
+      </listeners>
+    </trace>
+  </system.diagnostics>
+  <userSettings>
+    <E621RooShow.ViewModels.Properties.Settings>
+      <setting name="Tags" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="TagsBlacklist" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Interval" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="BackgroundColor" serializeAs="String">
+        <value>1, 1, 1</value>
+      </setting>
+      <setting name="ShellExec" serializeAs="String">
+        <value />
+      </setting>
+    </E621RooShow.ViewModels.Properties.Settings>
+  </userSettings>
 </configuration>
