--- a/e621rooshow/App.config
+++ b/e621rooshow/App.config
@@ -2,15 +2,14 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="E621RooShow.Windows.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-      <section name="e621rooshow.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="E621RooShow.ViewModels.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <userSettings>
-    <E621RooShow.Windows.Properties.Settings>
+    <E621RooShow.ViewModels.Properties.Settings>
       <setting name="Tags" serializeAs="String">
         <value />
       </setting>
@@ -23,17 +22,9 @@
       <setting name="BackgroundColor" serializeAs="String">
         <value>1, 1, 1</value>
       </setting>
-    </E621RooShow.Windows.Properties.Settings>
-    <e621rooshow.Properties.Settings>
-      <setting name="Tags" serializeAs="String">
+      <setting name="ShellExec" serializeAs="String">
         <value />
       </setting>
-      <setting name="TagsBlacklist" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="Interval" serializeAs="String">
-        <value>5</value>
-      </setting>
-    </e621rooshow.Properties.Settings>
+    </E621RooShow.ViewModels.Properties.Settings>
   </userSettings>
 </configuration>
