Update for API change

--- a/e621rooshow/E621RooShow.Windows.csproj
+++ b/e621rooshow/E621RooShow.Windows.csproj
@@ -74,6 +74,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Inputbox.cs" />
+    <Compile Include="ScreenManagement\SleepUtil.cs" />
     <Compile Include="shuffle.cs" />
     <Compile Include="XmlApi\E621Client.cs" />
     <Compile Include="XmlApi\Post.cs" />
@@ -106,7 +107,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\e621rooshow.Controls\E621RooShow.Windows.Controls.csproj">
