--- a/e621rooshow/App.config
+++ b/e621rooshow/App.config
@@ -8,6 +8,14 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
+  <system.diagnostics>
+    <trace autoflush="true">
+      <listeners>
+        <add name="myListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="rooshowlog.txt" />
+      </listeners>
+    </trace>
+  </system.diagnostics>
+  
   <userSettings>
     <E621RooShow.ViewModels.Properties.Settings>
       <setting name="Tags" serializeAs="String">
