--- a/e621rooshow/E621RooShow.Windows.csproj
+++ b/e621rooshow/E621RooShow.Windows.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Inputbox.cs" />
     <Compile Include="ScreenManagement\SleepUtil.cs" />
     <Compile Include="shuffle.cs" />
+    <Compile Include="TraceListeners\LabelTraceWriter.cs" />
     <Compile Include="XmlApi\E621Client.cs" />
     <Compile Include="XmlApi\Post.cs" />
     <Page Include="MainWindow.xaml">
