Removed pointless blacklist menu item Added abbility to change status colour

--- a/E621RooShow.ViewModels/E621RooShow.ViewModels.csproj
+++ b/E621RooShow.ViewModels/E621RooShow.ViewModels.csproj
@@ -50,6 +50,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="TraceListeners\LabelTraceWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\e621rooshow.Services\E621RooShow.Services.csproj">
