--- a/E621RooShow.ViewModels/Properties/Settings.settings
+++ b/E621RooShow.ViewModels/Properties/Settings.settings
@@ -5,9 +5,6 @@
     <Setting Name="Tags" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="TagsBlacklist" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
     <Setting Name="Interval" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">5</Value>
     </Setting>
@@ -16,6 +13,9 @@
     </Setting>
     <Setting Name="ShellExec" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="StatusColor" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">Lime</Value>
     </Setting>
   </Settings>
 </SettingsFile>
