--- a/e621rooshow/App.config
+++ b/e621rooshow/App.config
@@ -15,13 +15,10 @@
       </listeners>
     </trace>
   </system.diagnostics>
-  
+
   <userSettings>
     <E621RooShow.ViewModels.Properties.Settings>
       <setting name="Tags" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="TagsBlacklist" serializeAs="String">
         <value />
       </setting>
       <setting name="Interval" serializeAs="String">
@@ -32,6 +29,9 @@
       </setting>
       <setting name="ShellExec" serializeAs="String">
         <value />
+      </setting>
+      <setting name="StatusColor" serializeAs="String">
+        <value>0, 255, 0</value>
       </setting>
     </E621RooShow.ViewModels.Properties.Settings>
   </userSettings>
