Fixed a defect with full screen. Fixed an issue whereby API changes to e621 would cause 403 errors Added circular buffer for image navigation

--- a/E621RooShow.ViewModels/E621RooShow.ViewModels.csproj
+++ b/E621RooShow.ViewModels/E621RooShow.ViewModels.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CircularBuffer.cs" />
     <Compile Include="FileDisplayInfo.cs" />
     <Compile Include="ImageAspectRatio.cs" />
     <Compile Include="MainViewer.cs" />
