Update .net version

--- a/e621rooshow/App.config
+++ b/e621rooshow/App.config
@@ -1,17 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="E621RooShow.ViewModels.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="E621RooShow.ViewModels.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
   </startup>
   <system.diagnostics>
     <trace autoflush="true">
       <listeners>
-        <add name="myListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="rooshowlog.txt" />
+        <add name="myListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="rooshowlog.txt"/>
       </listeners>
     </trace>
   </system.diagnostics>
@@ -19,7 +19,7 @@
   <userSettings>
     <E621RooShow.ViewModels.Properties.Settings>
       <setting name="Tags" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Interval" serializeAs="String">
         <value>5</value>
@@ -28,7 +28,7 @@
         <value>1, 1, 1</value>
       </setting>
       <setting name="ShellExec" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="StatusColor" serializeAs="String">
         <value>0, 255, 0</value>
