--- a/E621RooShow.ViewModels/app.config
+++ b/E621RooShow.ViewModels/app.config
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="E621RooShow.ViewModels.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="E621RooShow.ViewModels.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <userSettings>
         <E621RooShow.ViewModels.Properties.Settings>
             <setting name="Tags" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Interval" serializeAs="String">
                 <value>5</value>
@@ -17,11 +17,11 @@
                 <value>1, 1, 1</value>
             </setting>
             <setting name="ShellExec" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="StatusColor" serializeAs="String">
                 <value>Lime</value>
             </setting>
         </E621RooShow.ViewModels.Properties.Settings>
     </userSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
